--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose-unique-validator": "2.0.2",
     "morgan": "1.9.1",
     "passport": "0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-local": "1.0.0",
     "request": "2.88.0",
     "slug": "1.0.0",
