--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "passport": "0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "1.0.0",
+    "passport-twitter": "^1.0.4",
+    "passport-yandex": "0.0.3",
     "request": "2.88.0",
     "slug": "1.0.0",
     "underscore": "1.9.1"
