--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose-unique-validator": "2.0.2",
     "morgan": "1.9.1",
     "passport": "0.4.0",
+    "passport-client-cert": "^2.1.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "1.0.0",
     "passport-twitter": "^1.0.4",
@@ -41,7 +42,7 @@
     "underscore": "1.9.1"
   },
   "devDependencies": {
-    "newman": "^4.4.0",
-    "nodemon": "^1.18.10"
+    "newman": "^4.4.1",
+    "nodemon": "^1.18.11"
   }
 }
